# MoloneySnake

./: CMakeLists.txt  CMakePresets.json
include/: Food.h  Game.h  GameObject.h  Globals.h  Snake.h
include/generated_assets/: Food_Image.h
src/: Food.cpp  Game.cpp  GameObject.cpp  MoloneySnake.cpp  Snake.cpp
src/image_exporter/: ImageExporter.cpp
